--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -179,24 +179,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xy1-eC-jXH">
-                            <size key="itemSize" width="375" height="159"/>
+                            <size key="itemSize" width="375" height="193"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="entry" id="1Oy-e8-JSn" customClass="BCHDWEntryCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="159"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="193"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="159"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="193"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfo-b9-jSo" customClass="BCHDWCardView">
-                                            <rect key="frame" x="16" y="16" width="343" height="135"/>
+                                            <rect key="frame" x="16" y="16" width="343" height="169"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HtA-qf-Q0j">
-                                                    <rect key="frame" x="16" y="8" width="243" height="60"/>
+                                                    <rect key="frame" x="16" y="8" width="243" height="94"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAb-oz-vwE">
                                                             <rect key="frame" x="0.0" y="0.0" width="243" height="14.5"/>
@@ -205,10 +205,10 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sxK-5L-NNW" customClass="BCHDWBannerView">
-                                                            <rect key="frame" x="0.0" y="22.5" width="243" height="37.5"/>
+                                                            <rect key="frame" x="0.0" y="22.5" width="243" height="49"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsj-V2-L7g">
-                                                                    <rect key="frame" x="8" y="8" width="227" height="21.5"/>
+                                                                    <rect key="frame" x="8" y="8" width="227" height="33"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -222,10 +222,24 @@
                                                                 <constraint firstAttribute="bottom" secondItem="bsj-V2-L7g" secondAttribute="bottom" constant="8" id="rMN-zo-2iL"/>
                                                             </constraints>
                                                         </view>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="lbt-cN-p1W">
+                                                            <rect key="frame" x="0.0" y="79.5" width="243" height="14.5"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="lock-icon" translatesAutoresizingMaskIntoConstraints="NO" id="bqb-2g-4t0">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="18" height="14.5"/>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0q-Bk-439">
+                                                                    <rect key="frame" x="22" y="0.0" width="221" height="14.5"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="28G-Ee-Cnn">
-                                                    <rect key="frame" x="16" y="76" width="311" height="51"/>
+                                                    <rect key="frame" x="16" y="110" width="311" height="51"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9o9-2L-yDd">
                                                             <rect key="frame" x="0.0" y="0.0" width="311" height="20.5"/>
@@ -277,6 +291,8 @@
                                     <outlet property="avatarImageView" destination="ODJ-jW-VR6" id="Q2W-b7-1Mx"/>
                                     <outlet property="cardView" destination="yfo-b9-jSo" id="JkV-J7-Ccm"/>
                                     <outlet property="commentLabel" destination="uFk-K5-XdF" id="2r5-JR-JKw"/>
+                                    <outlet property="dateLabel" destination="R0q-Bk-439" id="EG2-6g-Mqb"/>
+                                    <outlet property="lockedImageView" destination="bqb-2g-4t0" id="VV5-Be-Ibr"/>
                                     <outlet property="summaryLabel" destination="9o9-2L-yDd" id="4SW-j7-4C3"/>
                                     <outlet property="titleLabel" destination="bsj-V2-L7g" id="qUL-gD-ki4"/>
                                     <outlet property="widthContraint" destination="RYI-Te-Vug" id="qgO-x0-MWc"/>
@@ -296,7 +312,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZdF-5K-j4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="958" y="367"/>
+            <point key="canvasLocation" x="957.60000000000002" y="366.56671664167919"/>
         </scene>
         <!--Entry Detail Controller-->
         <scene sceneID="xDU-5j-z2J">
